--- a/lab1_Arendarska_Sarnicka/lab1_A_S/lab1_A_S.vcxproj.filters
+++ b/lab1_Arendarska_Sarnicka/lab1_A_S/lab1_A_S.vcxproj.filters
@@ -18,30 +18,18 @@
     <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="SortR.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="SortRQ.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Schrage.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="task.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Algorithms.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="header\SortR.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="header\SortRQ.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="header\Schrage.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="header\task.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="header\Algorithms.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
