--- a/lab1_Arendarska_Sarnicka/lab1_A_S/lab1_A_S.vcxproj
+++ b/lab1_Arendarska_Sarnicka/lab1_A_S/lab1_A_S.vcxproj
@@ -141,9 +141,12 @@
   <ItemGroup>
     <ClCompile Include="Algorithms.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Result.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header\Algorithms.h" />
+    <ClInclude Include="header\Result.h" />
+    <ClInclude Include="Task.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
