--- a/lab1_Arendarska_Sarnicka/lab1_A_S/lab1_A_S.vcxproj.filters
+++ b/lab1_Arendarska_Sarnicka/lab1_A_S/lab1_A_S.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Result.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Regret.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header\Algorithms.h">
@@ -32,7 +35,13 @@
     <ClInclude Include="header\Result.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Task.h">
+    <ClInclude Include="header\Task.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="header\Regret.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="header\Tree_Node.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
