--- a/lab4/lab4.vcxproj
+++ b/lab4/lab4.vcxproj
@@ -127,7 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Annealing.cpp" />
     <ClCompile Include="lab4.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Annealing.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
